# CEEC-He-thong-tuoi-cay-thong-minh-ESP32

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c
main/drivers/: button.c  button.h  buzzer.c  buzzer.h  dht.c  dht.h  led.c  led.h  relay.c  relay.h  rtc.c  rtc.h  soil.c  soil.h
main/services/: alert.c  alert.h  irrigation.c  irrigation.h  sensor.c  sensor.h  weather_api.c  weather_api.h  wifi_manager.c  wifi_manager.h
main/system/: config.h  fsm.c  fsm.h
