idf_component_register(
    SRCS 
        "main.c"
        "drivers/dht.c"
        "drivers/soil.c"
        "drivers/rtc.c"
        "drivers/relay.c"
        "drivers/buzzer.c"
        "drivers/button.c"
        "drivers/led.c"
        "services/sensor.c"
        "services/irrigation.c"
        "services/alert.c"
        "services/wifi_manager.c"
        "services/weather_api.c"
        "system/fsm.c"
    INCLUDE_DIRS 
        "."
        "drivers"
        "services"
        "system"
    REQUIRES 
        json
        esp_adc
        driver
        esp_wifi
        esp_http_client
        nvs_flash
        esp_timer
        esp_netif
)
